opa-policies/templates/allowed-repos-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: restrict-registries
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["restricted"]
  parameters:
    repos:
      - "gcr.io/"
      - "registry.k8s.io/"
